--- a/views/index.jade
+++ b/views/index.jade
@@ -8,3 +8,6 @@ html
     form(action="")
       input#new-message(autocomplete="off")
       button Send
+    script(src="/socket.io/socket.io.js")
+    script(src="http://code.jquery.com/jquery-1.11.1.js")
+    != js('app')
