--- a/views/chat.jade
+++ b/views/chat.jade
@@ -2,8 +2,10 @@ extends layout
 block append content
   p #{partner.username}
   ul#messages
+    each message, index in messages
+      li= message.author + ': ' + message.content
   form#new-message-form(action="")
-    input(type="text", name="content")
+    input(type="text", id="message-content")
     button Send
   script(src="/socket.io/socket.io.js")
   script(src="http://code.jquery.com/jquery-1.11.1.js")
